core/src/main/java/cambridge/parser/expressions/ExpressionParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g 2010-04-13 00:10:23

package cambridge.parser.expressions;


import org.antlr.runtime.BaseRecognizer;
import org.antlr.runtime.BitSet;
import org.antlr.runtime.DFA;
import org.antlr.runtime.NoViableAltException;
import org.antlr.runtime.Parser;
import org.antlr.runtime.RecognitionException;
import org.antlr.runtime.RecognizerSharedState;
import org.antlr.runtime.Token;
import org.antlr.runtime.TokenStream;

import java.util.ArrayList;

public class ExpressionParser extends Parser {
   public static final String[] tokenNames = new String[]{
      "<invalid>", "<EOR>", "<DOWN>", "<UP>", "IDENTIFIER", "INTLITERAL", "LONGLITERAL", "FLOATLITERAL", "DOUBLELITERAL", "STRINGLITERAL", "CHARLITERAL", "TRUE", "FALSE", "NULL", "RANGELITERAL", "IntegerNumber", "LongSuffix", "HexPrefix", "HexDigit", "Exponent", "NonIntegerNumber", "FloatSuffix", "DoubleSuffix", "EscapeSequence", "WS", "SUPER", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "DOT", "EQ", "BANG", "TILDE", "EQEQ", "AMPAMP", "BARBAR", "PLUS", "SUB", "STAR", "SLASH", "AMP", "BAR", "CARET", "PERCENT", "BANGEQ", "GT", "LT", "LETTER", "JavaIDDigit", "'{'", "':'", "','", "'}'", "'#super'", "'#this'", "'#iter'"
   };
   public static final int LT = 47;
   public static final int STAR = 39;
   public static final int IntegerNumber = 15;
   public static final int LETTER = 48;
   public static final int AMP = 41;
   public static final int Exponent = 19;
   public static final int SUB = 38;
   public static final int EOF = -1;
   public static final int HexDigit = 18;
   public static final int LPAREN = 26;
   public static final int T__55 = 55;
   public static final int LBRACKET = 28;
   public static final int T__56 = 56;
   public static final int RANGELITERAL = 14;
   public static final int RPAREN = 27;
   public static final int SLASH = 40;
   public static final int T__51 = 51;
   public static final int T__52 = 52;
   public static final int T__53 = 53;
   public static final int T__54 = 54;
   public static final int IDENTIFIER = 4;
   public static final int NonIntegerNumber = 20;
   public static final int FloatSuffix = 21;
   public static final int CARET = 43;
   public static final int TILDE = 33;
   public static final int BANGEQ = 45;
   public static final int PLUS = 37;
   public static final int BARBAR = 36;
   public static final int SUPER = 25;
   public static final int RBRACKET = 29;
   public static final int EQ = 31;
   public static final int DOT = 30;
   public static final int AMPAMP = 35;
   public static final int T__50 = 50;
   public static final int EQEQ = 34;
   public static final int HexPrefix = 17;
   public static final int PERCENT = 44;
   public static final int NULL = 13;
   public static final int DOUBLELITERAL = 8;
   public static final int BANG = 32;
   public static final int INTLITERAL = 5;
   public static final int TRUE = 11;
   public static final int LONGLITERAL = 6;
   public static final int LongSuffix = 16;
   public static final int WS = 24;
   public static final int DoubleSuffix = 22;
   public static final int STRINGLITERAL = 9;
   public static final int CHARLITERAL = 10;
   public static final int JavaIDDigit = 49;
   public static final int GT = 46;
   public static final int FALSE = 12;
   public static final int FLOATLITERAL = 7;
   public static final int EscapeSequence = 23;
   public static final int BAR = 42;

   // delegates
   // delegators


   public ExpressionParser(TokenStream input) {
      this(input, new RecognizerSharedState());
   }

   public ExpressionParser(TokenStream input, RecognizerSharedState state) {
      super(input, state);

   }


   public String[] getTokenNames() {
      return ExpressionParser.tokenNames;
   }

   public String getGrammarFileName() {
      return "C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g";
   }


   ArrayList<RecognitionException> errors;

   @Override
   public void reportError(RecognitionException e) {
      if (errors == null) errors = new ArrayList<RecognitionException>();
      errors.add(e);
   }

   public ArrayList<RecognitionException> getErrors() {
      return errors;
   }


   // $ANTLR start "compilationUnit"
   // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:39:1: compilationUnit returns [Expression value] : e= expression ;
   public final Expression compilationUnit() throws RecognitionException {
      Expression value = null;

      Expression e = null;


      try {
         // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:43:5: (e= expression )
         // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:43:9: e= expression
         {
            pushFollow(FOLLOW_expression_in_compilationUnit56);
            e = expression();

            state._fsp--;

            value = e;

         }

      } catch (RecognitionException re) {
         reportError(re);
         recover(input, re);
      } finally {
      }
      return value;
   }
   // $ANTLR end "compilationUnit"


   // $ANTLR start "mapExpression"
   // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:46:1: mapExpression returns [MapExpression value] : '{' i= IDENTIFIER ':' e= expression ( ',' id= IDENTIFIER ':' x= expression )* '}' ;
   public final MapExpression mapExpression() throws RecognitionException {
      MapExpression value = null;

      Token i = null;
      Token id = null;
      Expression e = null;

      Expression x = null;


      try {
         // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:47:3: ( '{' i= IDENTIFIER ':' e= expression ( ',' id= IDENTIFIER ':' x= expression )* '}' )
         // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:47:7: '{' i= IDENTIFIER ':' e= expression ( ',' id= IDENTIFIER ':' x= expression )* '}'
         {
            match(input, 50, FOLLOW_50_in_mapExpression83);
            i = (Token) match(input, IDENTIFIER, FOLLOW_IDENTIFIER_in_mapExpression87);
            match(input, 51, FOLLOW_51_in_mapExpression89);
            pushFollow(FOLLOW_expression_in_mapExpression93);
            e = expression();

            state._fsp--;

            value = new MapExpression();
            value.put(i.getText(), e);
            // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:47:96: ( ',' id= IDENTIFIER ':' x= expression )*
            loop1:
            do {
               int alt1 = 2;
               int LA1_0 = input.LA(1);

               if ((LA1_0 == 52)) {
                  alt1 = 1;
               }


               switch (alt1) {
                  case 1:
                     // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:47:97: ',' id= IDENTIFIER ':' x= expression
                  {
                     match(input, 52, FOLLOW_52_in_mapExpression98);
                     id = (Token) match(input, IDENTIFIER, FOLLOW_IDENTIFIER_in_mapExpression102);
                     match(input, 51, FOLLOW_51_in_mapExpression104);
                     pushFollow(FOLLOW_expression_in_mapExpression108);
                     x = expression();

                     state._fsp--;

                     value.put(id.getText(), x);

                  }
                  break;

                  default:
                     break loop1;
               }
            } while (true);

            match(input, 53, FOLLOW_53_in_mapExpression115);

         }

      } catch (RecognitionException re) {
         reportError(re);
         recover(input, re);
      } finally {
      }
      return value;
   }
   // $ANTLR end "mapExpression"


   // $ANTLR start "listExpression"
   // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:50:1: listExpression returns [ListExpression value] : '[' e= expression ( ',' x= expression )* ']' ;
   public final ListExpression listExpression() throws RecognitionException {
      ListExpression value = null;

      Expression e = null;

      Expression x = null;


      try {
         // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:51:5: ( '[' e= expression ( ',' x= expression )* ']' )
         // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:51:9: '[' e= expression ( ',' x= expression )* ']'
         {
            match(input, LBRACKET, FOLLOW_LBRACKET_in_listExpression136);
            pushFollow(FOLLOW_expression_in_listExpression140);
            e = expression();

            state._fsp--;

            value = new ListExpression();
            value.add(e);
            // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:51:75: ( ',' x= expression )*
            loop2:
            do {
               int alt2 = 2;
               int LA2_0 = input.LA(1);

               if ((LA2_0 == 52)) {
                  alt2 = 1;
               }


               switch (alt2) {
                  case 1:
                     // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:51:76: ',' x= expression
                  {
                     match(input, 52, FOLLOW_52_in_listExpression145);
                     pushFollow(FOLLOW_expression_in_listExpression149);
                     x = expression();

                     state._fsp--;

                     value.add(x);

                  }
                  break;

                  default:
                     break loop2;
               }
            } while (true);

            match(input, RBRACKET, FOLLOW_RBRACKET_in_listExpression155);

         }

      } catch (RecognitionException re) {
         reportError(re);
         recover(input, re);
      } finally {
      }
      return value;
   }
   // $ANTLR end "listExpression"


   // $ANTLR start "parExpression"
   // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:54:1: parExpression returns [Expression value] : '(' e= expression ')' ;
   public final Expression parExpression() throws RecognitionException {
      Expression value = null;

      Expression e = null;


      try {
         // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:55:5: ( '(' e= expression ')' )
         // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:55:9: '(' e= expression ')'
         {
            match(input, LPAREN, FOLLOW_LPAREN_in_parExpression178);
            pushFollow(FOLLOW_expression_in_parExpression182);
            e = expression();

            state._fsp--;

            match(input, RPAREN, FOLLOW_RPAREN_in_parExpression184);
            value = e;

         }

      } catch (RecognitionException re) {
         reportError(re);
         recover(input, re);
      } finally {
      }
      return value;
   }
   // $ANTLR end "parExpression"


   // $ANTLR start "function"
   // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:58:1: function returns [Expression value] : IDENTIFIER '(' e= expression ( ',' f= expression )* ')' ;
   public final Expression function() throws RecognitionException {
      Expression value = null;

      Token IDENTIFIER1 = null;
      Expression e = null;

      Expression f = null;


      try {
         // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:59:5: ( IDENTIFIER '(' e= expression ( ',' f= expression )* ')' )
         // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:59:9: IDENTIFIER '(' e= expression ( ',' f= expression )* ')'
         {
            IDENTIFIER1 = (Token) match(input, IDENTIFIER, FOLLOW_IDENTIFIER_in_function209);
            match(input, LPAREN, FOLLOW_LPAREN_in_function211);
            pushFollow(FOLLOW_expression_in_function215);
            e = expression();

            state._fsp--;

            value = new FunctionExpression((IDENTIFIER1 != null ? IDENTIFIER1.getText() : null));
            ArrayList<Expression> params = new ArrayList<Expression>();
            params.add(e);

            // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:63:7: ( ',' f= expression )*
            loop3:
            do {
               int alt3 = 2;
               int LA3_0 = input.LA(1);

               if ((LA3_0 == 52)) {
                  alt3 = 1;
               }


               switch (alt3) {
                  case 1:
                     // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:63:8: ',' f= expression
                  {
                     match(input, 52, FOLLOW_52_in_function224);
                     pushFollow(FOLLOW_expression_in_function228);
                     f = expression();

                     state._fsp--;

                     params.add(f);

                  }
                  break;

                  default:
                     break loop3;
               }
            } while (true);

            match(input, RPAREN, FOLLOW_RPAREN_in_function234);
            ((FunctionExpression) value).setParameters(params);

         }

      } catch (RecognitionException re) {
         reportError(re);
         recover(input, re);
      } finally {
      }
      return value;
   }
   // $ANTLR end "function"


   // $ANTLR start "expression"
   // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:66:1: expression returns [Expression value] : l= conditionalAndExpression ( '||' r= conditionalAndExpression )* ;
   public final Expression expression() throws RecognitionException {
      Expression value = null;

      Expression l = null;

      Expression r = null;


      try {
         // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:67:5: (l= conditionalAndExpression ( '||' r= conditionalAndExpression )* )
         // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:67:9: l= conditionalAndExpression ( '||' r= conditionalAndExpression )*
         {
            pushFollow(FOLLOW_conditionalAndExpression_in_expression267);
            l = conditionalAndExpression();

            state._fsp--;

            value = l;
            // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:68:9: ( '||' r= conditionalAndExpression )*
            loop4:
            do {
               int alt4 = 2;
               int LA4_0 = input.LA(1);

               if ((LA4_0 == BARBAR)) {
                  alt4 = 1;
               }


               switch (alt4) {
                  case 1:
                     // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:68:10: '||' r= conditionalAndExpression
                  {
                     match(input, BARBAR, FOLLOW_BARBAR_in_expression280);
                     pushFollow(FOLLOW_conditionalAndExpression_in_expression286);
                     r = conditionalAndExpression();

                     state._fsp--;

                     value = new BinaryExpression(Expression.Operator.ConditionalOr, value, r);

                  }
                  break;

                  default:
                     break loop4;
               }
            } while (true);


         }

      } catch (RecognitionException re) {
         reportError(re);
         recover(input, re);
      } finally {
      }
      return value;
   }
   // $ANTLR end "expression"


   // $ANTLR start "conditionalAndExpression"
   // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:72:1: conditionalAndExpression returns [Expression value] : l= inclusiveOrExpression ( '&&' r= inclusiveOrExpression )* ;
   public final Expression conditionalAndExpression() throws RecognitionException {
      Expression value = null;

      Expression l = null;

      Expression r = null;


      try {
         // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:73:5: (l= inclusiveOrExpression ( '&&' r= inclusiveOrExpression )* )
         // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:73:9: l= inclusiveOrExpression ( '&&' r= inclusiveOrExpression )*
         {
            pushFollow(FOLLOW_inclusiveOrExpression_in_conditionalAndExpression331);
            l = inclusiveOrExpression();

            state._fsp--;

            value = l;
            // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:74:9: ( '&&' r= inclusiveOrExpression )*
            loop5:
            do {
               int alt5 = 2;
               int LA5_0 = input.LA(1);

               if ((LA5_0 == AMPAMP)) {
                  alt5 = 1;
               }


               switch (alt5) {
                  case 1:
                     // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:74:10: '&&' r= inclusiveOrExpression
                  {
                     match(input, AMPAMP, FOLLOW_AMPAMP_in_conditionalAndExpression344);
                     pushFollow(FOLLOW_inclusiveOrExpression_in_conditionalAndExpression350);
                     r = inclusiveOrExpression();

                     state._fsp--;

                     value = new BinaryExpression(Expression.Operator.ConditionalAnd, value, r);

                  }
                  break;

                  default:
                     break loop5;
               }
            } while (true);


         }

      } catch (RecognitionException re) {
         reportError(re);
         recover(input, re);
      } finally {
      }
      return value;
   }
   // $ANTLR end "conditionalAndExpression"


   // $ANTLR start "inclusiveOrExpression"
   // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:78:1: inclusiveOrExpression returns [Expression value] : l= exclusiveOrExpression ( '|' r= exclusiveOrExpression )* ;
   public final Expression inclusiveOrExpression() throws RecognitionException {
      Expression value = null;

      Expression l = null;

      Expression r = null;


      try {
         // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:79:5: (l= exclusiveOrExpression ( '|' r= exclusiveOrExpression )* )
         // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:79:9: l= exclusiveOrExpression ( '|' r= exclusiveOrExpression )*
         {
            pushFollow(FOLLOW_exclusiveOrExpression_in_inclusiveOrExpression395);
            l = exclusiveOrExpression();

            state._fsp--;

            value = l;
            // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:80:9: ( '|' r= exclusiveOrExpression )*
            loop6:
            do {
               int alt6 = 2;
               int LA6_0 = input.LA(1);

               if ((LA6_0 == BAR)) {
                  alt6 = 1;
               }


               switch (alt6) {
                  case 1:
                     // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:80:10: '|' r= exclusiveOrExpression
                  {
                     match(input, BAR, FOLLOW_BAR_in_inclusiveOrExpression408);
                     pushFollow(FOLLOW_exclusiveOrExpression_in_inclusiveOrExpression414);
                     r = exclusiveOrExpression();

                     state._fsp--;

                     value = new BinaryExpression(Expression.Operator.Or, value, r);

                  }
                  break;

                  default:
                     break loop6;
               }
            } while (true);


         }

      } catch (RecognitionException re) {
         reportError(re);
         recover(input, re);
      } finally {
      }
      return value;
   }
   // $ANTLR end "inclusiveOrExpression"


   // $ANTLR start "exclusiveOrExpression"
   // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:84:1: exclusiveOrExpression returns [Expression value] : l= andExpression ( '^' r= andExpression )* ;
   public final Expression exclusiveOrExpression() throws RecognitionException {
      Expression value = null;

      Expression l = null;

      Expression r = null;


      try {
         // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:85:5: (l= andExpression ( '^' r= andExpression )* )
         // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:85:9: l= andExpression ( '^' r= andExpression )*
         {
            pushFollow(FOLLOW_andExpression_in_exclusiveOrExpression459);
            l = andExpression();

            state._fsp--;

            value = l;
            // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:86:9: ( '^' r= andExpression )*
            loop7:
            do {
               int alt7 = 2;
               int LA7_0 = input.LA(1);

               if ((LA7_0 == CARET)) {
                  alt7 = 1;
               }


               switch (alt7) {
                  case 1:
                     // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:86:10: '^' r= andExpression
                  {
                     match(input, CARET, FOLLOW_CARET_in_exclusiveOrExpression472);
                     pushFollow(FOLLOW_andExpression_in_exclusiveOrExpression478);
                     r = andExpression();

                     state._fsp--;

                     value = new BinaryExpression(Expression.Operator.XOr, value, r);

                  }
                  break;

                  default:
                     break loop7;
               }
            } while (true);


         }

      } catch (RecognitionException re) {
         reportError(re);
         recover(input, re);
      } finally {
      }
      return value;
   }
   // $ANTLR end "exclusiveOrExpression"


   // $ANTLR start "andExpression"
   // C:\\Users\\Erdinc\\Projects\\cambridge\\src\\main\\java\\cambridge\\parser\\expressions\\Expression.g:90:1: andExpression returns [Expression value] : l= equalityExpression ( '&' r= equalityExpression )* ;
   public final Expression andExpression() throws RecognitionException {
      Expression value = null;

      Expression l = null;
